# ama

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
doc/: api_module.md  api_node.md  contrib.md
example/: ast_script.cpp  borrow_check.cpp  fizzbuzz.cpp  hello_world.cpp  js_lambda.py  jsism_console.cpp  map_and_lambda.py
example/c_exception/: readme.md  sjlj_exception.ama.js  test.c
example/cmake/: func.c  func.h  test_cmake.c
example/haskell/: c2hs.ama.js  fac.hs  fizzbuzz.hs  readme.md
example/high_order_types/: readme.md  test.js  type_check.ama.js
example/native_module/: native_module.cpp  test_native_module.js
example/precision/: augment.ama.js  readme.md  test.js
example/ptr_arith/: no_ptr_arith.ama.js  readme.md  test.c
jc_lib/: dumpstack.hpp  env.cpp  env.hpp  fs.cpp  fs.hpp  jc_platform.h  jc_stdinc.h  jc_unique_string.h  json.h  json.hpp  path.hpp  path_posix.cpp  path_win32.cpp  unicode.cpp  unicode.hpp
jc_lib/dumpstack/: linux_bt.cpp  win_dbghelp.cpp
jc_lib/unicode/: case.cpp  case.hpp
migration/: make_cpp_project.js
modules/: _cmdline.ama.js  _init.js  _sandbox.js  assert.js  auto_paren.js  auto_semicolon.js  bisync.ama.js  check_raw.ama.js  class.ama.js  cmake.ama.js  cmake.jcs  cmake.js  depends.ama.js  depends.jcs  depends.js  dump_ast.ama.js  dump_decl.ama.js  fs.jcs  fs.js  fsext.js  jcs.js  jsism.jcs  jsism.js  makefile  omnichecker.ama.js  path.jcs  path.js  pipe.js  pipeline.js
modules/_internal/: aba_test.ama.js
modules/check/: borrow.ama.js  undecl.ama.js  uninit.ama.js
modules/check/cpp/: borrow.ama.js
modules/cpp/: amacpp.js  asset.ama.js  auto_decl.ama.js  auto_dot.ama.js  auto_header.ama.js  auto_paren.ama.js  autodecl.ama.js  autoparen.ama.js  c_for.ama.js  cpp_indent.ama.js  from_ama.js  gentag.ama.js  jsism.ama.js  line_sync.ama.js  move_operator.ama.js  range_check.ama.js  sane_export.ama.js  sane_for.ama.js  sane_init.ama.js  sane_types.ama.js  short_types.ama.js  to_ama.js  typing.ama.js  unified_null.ama.js
modules/cpp/json/: json.cpp  json.h
script/: docgen.ama.js  sync.js
script/doc_templates/: module.md  module_filter.md  module_section.md  node.md  node_api.md  node_ctor.md
src/ast/: node.cpp  node.hpp  node.jc  node.jch  nodegc.cpp  nodegc.hpp  nodegc.jc  nodegc.jch  v3macros.js
src/codegen/: gen.cpp  gen.hpp  gen.jc  gen.jch
src/entry/: CMakeLists.txt  ama.cpp  ama.jc  amal.cpp  amal.jc
src/exec/: engine.cpp  engine.hpp  engine.jc  engine.jch
src/parser/: charset.cpp  charset.hpp  charset.jc  charset.jch  cleanup.cpp  cleanup.hpp  cleanup.jc  cleanup.jch  decl.cpp  decl.hpp  decl.jc  decl.jch  depends.cpp  depends.hpp  depends.jc  depends.jch  findama.cpp  findama.hpp  findama.jc  findama.jch  literal.cpp  literal.hpp  literal.jc  literal.jch  operator.cpp  operator.hpp  operator.jc  operator.jch  postfix.cpp  postfix.hpp  postfix.jc  postfix.jch  scoping.cpp  scoping.hpp  scoping.jc  scoping.jch  simppair.cpp  simppair.hpp  simppair.jc  simppair.jch
src/script/: js_init.js  jsapi.cpp  jsapi.hpp  jsapi.jc  jsapi.jch  jsenv.cpp  jsenv.hpp  jsenv.jc  jsenv.jch  jsgen.cpp  jsgen.hpp  jsgen.jc  jsgen.jch  jsgen.js  nodeof_to_ast.cpp  nodeof_to_ast.hpp  nodeof_to_ast.jc  nodeof_to_ast.jch
src/script/quickjs/src/: LICENSE  cutils.c  cutils.h  libregexp.c  libunicode.c  quickjs.c  quickjs.h
src/util/: console.hpp  env.cpp  env.hpp  fix_win_console.cpp  fs.cpp  fs.hpp  gcstring.cpp  gcstring.h  jc_array.h  jc_unique_string.cpp  jc_unique_string.h  mempool.cpp  mempool.hpp  mempool.jc  mempool.jch  path.hpp  path_posix.cpp  path_win32.cpp  span_polyfill.h  unicode.cpp  unicode.hpp  wcwidth.cpp  wcwidth.hpp
src/util/dumpstack/: dumpstack.h  enable_dump.cpp  linux_bt.cpp  win_dbghelp.cpp
src/util/unicode/: case.cpp  case.hpp
test/: CMakeLists.txt  engine_input.c  native_module.cpp  test_ama_dev.cpp  test_auto_dot.cpp  test_auto_header.cpp  test_autodecl.cpp  test_autoparen.cpp  test_autoptr.cpp  test_base_dot.cpp  test_borrow0.cpp  test_c_for.js  test_class.java  test_colon.jc  test_comma.js  test_crash.c  test_ctor.cpp  test_cuda.cu  test_decl.cpp  test_decl.jc  test_decl.py  test_define.cpp  test_destr.py  test_engine.jc  test_for.cpp  test_for_then_if.cpp  test_function.js  test_gcstring.cpp  test_hello.cpp  test_imcf.js  test_import.js  test_incomplete.c  test_indent.py  test_initializer.cpp  test_jsgen.ama.cpp  test_jsgen.js  test_jsism.cpp  test_jsmethod.cpp  test_json.cpp  test_loop_typing.cpp  (+18 more)
test/cmake/: test_cmake.ama.cpp  test_cmake.c
trans/: from_ama.js  sync.js  to_ama.js
